# CineNight-Home-Cinema-

./: README.md  pyproject.toml
kinopoisk/home/: settings.py  urls.py
kinopoisk/kinop/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
kinopoisk/kinop/management/commands/: import_movies.py
kinopoisk/kinop/migrations/: 0001_initial.py  0002_rename_raiting_movie_rating_remove_movie_director_and_more.py  0003_remove_movie_media_type_movie_media_type.py  0004_alter_movie_media_type.py  0005_alter_movie_directors_alter_movie_genres_and_more.py  0006_alter_movie_image.py
kinopoisk/kinop/static/kinopoisk/css/: detail.css  style_list.css
kinopoisk/kinop/static/kinopoisk/js/: js_list.js  menu.js
kinopoisk/kinop/templates/menu/: series.html
kinopoisk/kinop/templates/movies/: movie_confirm_delete.html  movie_detail.html  movie_form.html  movie_list.html
kinopoisk/kinop_json/: director.json  genre.json  mediatype.json  movie.json
