[tool.poetry]
name = "kinopoisk"
version = "0.1.0"
description = ""
authors = ["Konstantin Plotkin <koostaac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
